<?xml version="1.0" encoding="UTF-8"?>
<!--
  Copyright 2013 ParanoidAndroid Project

  This file is part of Paranoid OTA.

  Paranoid OTA is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  Paranoid OTA is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
 
  You should have received a copy of the GNU General Public License
  along with Paranoid OTA.  If not, see <http://www.gnu.org/licenses/>.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_check"
          android:icon="@drawable/slider_check"
          android:title="@string/check_for_updates"
          android:showAsAction="ifRoom|withText" />

    <item android:id="@+id/action_install"
          android:icon="@drawable/ic_flash"
          android:title="@string/install"
          android:showAsAction="ifRoom|withText" />

    <item android:id="@+id/action_add"
          android:icon="@drawable/ic_add"
          android:title="@string/install_add_file"
          android:showAsAction="ifRoom|withText" />

    <item android:id="@+id/action_settings"
          android:icon="@drawable/action_settings"
          android:title="@string/action_settings"
          android:showAsAction="ifRoom|withText" />
</menu>