<!--
  Copyright 2013 ParanoidAndroid Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#dd000000"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/header"
            android:text="@string/introduction_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/ClingTitleText"
            android:paddingBottom="0dp"/>

        <View
            android:layout_below="@id/header"
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_below="@id/divider"
            android:paddingTop="20dp"
            android:text="@string/introduction_installer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/ClingText"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:text="@string/introduction_continue"
            style="@android:style/Widget.Holo.Button"/>
    </RelativeLayout>

</LinearLayout>
